--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				padding-top: 20px;
 			}
 
-			li {
+			.pub {
 				margin-bottom: 20px;
 			}
 		</style>
@@ -106,10 +106,10 @@
 		<div class="container" style="margin-top: 50px; margin-bottom: 50px;">
 			<!-- PFP -->
 			<div class="row">
-				<div class="card mx-auto" style="width: 300px;">
+				<div class="card mx-auto" style="width: 400px;">
 					<h1 class="card-title mx-auto">Jason Kim</h1>
 					<h5 class="card-title mx-auto">김종성</h5>
-					<img class="card-img-top" src="img/nosajmik.jpg " alt="Profile Picture"
+					<img class="card-img-top" src="img/gradpic.jpg " alt="Profile Picture"
 						style="border-radius: 20px; margin-top: 20px;">
 				</div>
 			</div>
@@ -147,7 +147,7 @@
 
 						<h4 style="color: #FFA500"><small>nosajmik@gatech-scp:~$</small> ls publications/</h4>
 						<ul>
-							<li>Ayush Agarwal, Sioli O'Connell, <u>Jason Kim</u>, Shaked Yehezkel, Daniel Genkin, Eyal Ronen, and Yuval Yarom.<br>
+							<li class="pub">Ayush Agarwal, Sioli O'Connell, <u>Jason Kim</u>, Shaked Yehezkel, Daniel Genkin, Eyal Ronen, and Yuval Yarom.<br>
 								Spook.js: Attacking Chrome Strict Site Isolation via Speculative Execution.<br>
 								To appear in IEEE Symposium on Security and Privacy (S&P) 2022.<br>
 								<div class="btn-group mx-auto" role="group" style="margin-top: 10px;">
@@ -158,7 +158,7 @@
 											aria-hidden="true"></i><a target="_blank" href="https://www.spookjs.com/files/spook-js.pdf">Paper (PDF)</a></button>
 								</div>
 							</li>
-							<li><u>Jason Kim</u>, Daniel Genkin, and Kevin Leach.<br>SToPR: Swift Toolchain Provenance Recovery of ARM Program Binaries.<br>Revision in progress.<br></li>
+							<li class="pub"><u>Jason Kim</u>, Daniel Genkin, and Kevin Leach.<br>SToPR: Swift Toolchain Provenance Recovery of ARM Program Binaries.<br>Revision in progress.<br></li>
 						</ul>
 
 					</div>
