--- a/photography.html
+++ b/photography.html
@@ -103,7 +103,7 @@
 					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Projects</a>
+					<a class="nav-link" href="projects.html">Projects</a>
 				</li>
 				<li class="nav-item active">
 					<a class="nav-link" href="photography.html">Photography</a>
@@ -116,13 +116,13 @@
 				<div class="accordion" id="album" style="width: 100%;">
 					<div>
 						<div id="headingOne">
-							<button class="btn btn-warning text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="width: 100%;">
+							<button class="btn btn-warning text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" style="width: 100%;">
 								<p class="albumname"><i class="fa fa-camera-retro" aria-hidden="true"></i>
 									Test Atlanta Album</p>
 							</button>
 						</div>
 
-						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#album">
+						<div id="collapseOne" class="collapse hide" aria-labelledby="headingOne" data-parent="#album">
 							<div class="row">
 								<div class="col-md-4">
 									<div class="thumbnail">
