New profile picture

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="row">
 				<div class="card mx-auto" style="width: 400px;">
 					<h1 class="card-title mx-auto">Jason Kim</h1>
-					<img class="card-img-top" src="img/gradpic.jpg " alt="Profile Picture"
+					<img class="card-img-top" src="img/profile.jpg" alt="Profile Picture"
 						style="border-radius: 20px; margin-top: 20px;">
 				</div>
 			</div>
