Another CV update

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 							class="fa fa-graduation-cap" aria-hidden="true"></i>Curriculum Vitae</a>
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
 					<a target="_blank" href="https://github.com/jasonkimprojects" class="btn btn-secondary mybtn"
-						role="button"><i class="fa fa-github" aria-hidden="true"></i>GitHub</a>
+						role="button"><i class="fa fa-github" aria-hidden="true"></i>nosajmik</a>
+						<a target="_blank" href="https://github.com/jasonkimprojects" class="btn btn-secondary mybtn"
+						role="button"><i class="fa fa-github" aria-hidden="true"></i>jasonkimprojects</a>
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
 					<a target="_blank" href="https://linkedin.com/in/nosajmik" class="btn btn-secondary mybtn"
 						role="button"><i class="fa fa-linkedin-square" aria-hidden="true"></i>LinkedIn</a>
