Whoami and research

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
 					<a target="_blank" href="https://github.com/jasonkimprojects" class="btn btn-secondary mybtn"
 						role="button"><i class="fa fa-github" aria-hidden="true"></i>nosajmik</a>
-						<a target="_blank" href="https://github.com/jasonkimprojects" class="btn btn-secondary mybtn"
+					<a target="_blank" href="https://github.com/jasonkimprojects" class="btn btn-secondary mybtn"
 						role="button"><i class="fa fa-github" aria-hidden="true"></i>jasonkimprojects</a>
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
 					<a target="_blank" href="https://linkedin.com/in/nosajmik" class="btn btn-secondary mybtn"
@@ -99,27 +99,24 @@
 				<div class="col">
 					<div class="col-md-12">
 						<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> whoami</h4>
-						<p>Hello! My name is Jason, and I am a first-year PhD student in the <a
-								href="https://scp.cc.gatech.edu">School of Cybersecurity and Privacy</a> at <a
-								href="https://www.gatech.edu/">Georgia Tech</a>, fortunate to be advised by Prof. <a
-								href="https://www.cc.gatech.edu/~genkin/">Daniel Genkin</a>. I graduated from the <a
+						<p>Hello! My name is Jason Kim, and I am a third-year PhD student in the <a
+								href="https://architecture.fail/">Hardware Security Lab</a> advised by Prof. <a
+								href="https://www.cc.gatech.edu/~genkin/">Daniel Genkin</a>. I am part of the <a
+								href="https://scp.cc.gatech.edu">School of Cybersecurity and Privacy</a> at the <a
+								href="https://www.gatech.edu/">Georgia Institute of Technology</a>. I graduated from the <a
 								href="https://umich.edu">University of Michigan</a> in May 2021 with my bachelor's
 							degree in computer science, where I worked on projects with Daniel and Prof. <a
-								href="https://kjleach.eecs.umich.edu">Kevin Leach</a>.</p>
+								href="https://kjleach.eecs.umich.edu">Kevin Leach</a>.
+						</p>
 
 						<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> cat research.txt</h4>
-						<p>Broadly, I am interested in side channel attacks and their applications. Rather than
-							attacking the algorithms of a computer system, I find ways to break computers by taking
-							advantage of subtleties that arise from how they are designed and implemented. More
-							recently, I am working on breaking in-browser countermeasures against microprocessor side
-							channels, and how such channels can be <strike>abused</strike> applied to compromise privacy
-							and anonymity on the Internet. Quoting my advisor: they make, we break!</p>
+						<p>I am interested in offensive hardware security and side channels. My work is to scrutinize exotic optimizations in microarchitecture, and investigate if these optimizations carry implications for security. Within this field, my focus is on Apple Silicon and the security of web browser engines.</p>
 
 						<p>Before side channels, I worked on machine learning models for binary analysis, network
 							security and intrusion detection systems, and a little bit of bioinformatics alongside my
 							undergraduate minor in biology. I was also on the course staff of Michigan's <a
 								href="https://eecs388.org">computer security course</a> for two years as a teaching
-							assistant.</p>
+							assistant, and brought components of it over to Georgia Tech's <a href="https://gtinfosec.org/"">Introduction to Information Security</a> over a year's tenure.</p>
 
 						<h4 style="color: #0088ff"><small>nosajmik@gatech-scp:~$</small> cat misc.txt</h4>
 						<p>When I am not working on side channels, I enjoy cooking, watching movies, and going on a hike
